css/styles.css
body {
  font-family: 'Signika', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.6;
  background-color: #afd4e8;
}

h1 {
  font-size: 30px;
  font-weight: 700;
}

.pokedex {
  max-width: 700px;
  margin: 0 auto;
  text-align: center;
}

.list-button {
  background-color:#e8c3af;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  margin: 4px 2px;
  width: 10em;
  cursor: pointer;
}

.pokemon-list {
list-style-type: none;
}

.modal h1 {
text-align: center;
text-transform: capitalize;
}

.modal-img {
display: block;
margin-left: auto;
margin-right: auto;
width: 50%;
height: auto;
}

.modal-body
{
background: #e8e0af;
}

@media all and (max-width: 1024px) {
.pokemon-list li {
  width: 100%;
}
}

@media all and (max-width: 630px) {
.pokemon-list li {
  width: 100%;
}
}

